--- a/Bootstrap/.github/workflows/deploy.yml
+++ b/Bootstrap/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Bootstrap Project
 on:
   push:
     branches:
-      - main
+      - main  # Use main branch instead of gh-pages
 
 jobs:
   build-and-deploy:
@@ -14,13 +14,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Dependencies
-        run: npm install
+        run: npm install || echo "No dependencies to install"
 
       - name: Compile SCSS to CSS (if applicable)
         run: npm run build-css || echo "No SCSS compilation needed"
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          branch: gh-pages
-          folder: . # Deploy the root folder
+          path: ./  # Deploy the root folder
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
